Fixed cd and compose

--- a/stack.yml
+++ b/stack.yml
@@ -13,8 +13,7 @@ Resources:
         sudo su
         yum install git -y
         git clone https://github.com/abelhbeyene/cloudformation-experiment.git /usr/share/nginx/html
-        cd /usr/share/nginx/html
-        bash ./server-config/init.sh
+        bash /usr/share/nginx/html/server-config/init.sh
 
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
